# quadratic-sieve-rs

./: .gitignore  Cargo.toml  README.md  README.tex
presentation/: presentation.nav  presentation.tex
python-version/: ext_euclid.py  factor_base.py  legendre.py  miller-rabin.py  naive_factor.py  naive_linalg.py  pollard-rho.py  primes.py  qs-sieveless.py  qs-sieving.py  quadratic-sieve.py  sqrt_mod.py  util.py
src/: complex.rs  congruence_class.rs  conjugate.rs  etc.rs  identity.rs  integers.rs  lib.rs  main.rs  main_.rs  matrix.rs  primes_.rs  quadratic_sieve.rs  quotient_group.rs  rings_.rs  traits.rs
tests/: congruence_class.rs  matrix.rs
writeup/: main.bbl  main.bcf  main.blg  main.tex  references.bib
