[package]
name = "quadratic-sieve"
version = "0.1.0"
authors = ["Nils Olsson <nilso@enosis.net>"]
edition = "2018"

[lib]
name = "quadratic_sieve"
path = "src/lib.rs"

[dependencies]
#auto_ops = "0.1.0"
itertools = "0.9.0"
rand = "0.8.3"
#nalgebra = "*"
#streaming-iterator = "0.1.5"
array-init = "2.0"
num-integer = "0.1.43"
ramp = "0.5.8"
#array-const-fn-init = "0.1.1"
#strided = "0.2.9"
